--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "moment": "^2.17.1",
     "numbro": "^1.9.3",
     "pikaday": "^1.5.1",
-    "handsontable": "^0.33.0"
+    "handsontable": "git+https://github.com/sundagy/handsontable.git"
   },
   "scripts": {
     "test": "npm run _pre-testing && jest",
